--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fontfaceobserver": "^2.1.0",
     "gatsby": "2.13.31",
     "gatsby-image": "2.2.6",
+    "gatsby-plugin-glslify": "^1.0.0",
     "gatsby-plugin-netlify": "2.1.3",
     "gatsby-plugin-netlify-cms": "4.1.6",
     "gatsby-plugin-purgecss": "4.0.0",
@@ -22,6 +23,7 @@
     "gatsby-source-filesystem": "2.1.5",
     "gatsby-transformer-remark": "2.6.7",
     "gatsby-transformer-sharp": "2.2.4",
+    "glslify": "^7.0.0",
     "gsap": "^2.1.3",
     "lodash": "4.17.15",
     "lodash-webpack-plugin": "0.11.5",
