--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@loadable/component": "^5.10.2",
     "bootstrap": "4.3.1",
-    "classnames": "2.2.6",
+    "classnames": "^2.2.6",
     "fontfaceobserver": "^2.1.0",
     "gatsby": "2.13.31",
     "gatsby-image": "2.2.6",
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "3.1.2",
     "gatsby-plugin-sass": "2.1.3",
     "gatsby-plugin-sharp": "2.2.8",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-remark-copy-linked-files": "2.1.3",
     "gatsby-remark-images": "3.1.6",
     "gatsby-remark-relative-images": "0.2.2",
