--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "parcel-bundler": "1.12.3",
     "pixi-shim": "^1.3.14",
     "pixi.js": "^5.0.3",
+    "postcss-random": "^1.0.9",
+    "postcss-responsive-type": "^1.0.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "5.2.1",
     "react-player": "^1.11.0",
+    "react-responsive": "8.0.0-beta.1",
     "react-reveal": "1.2.2",
     "react-transition-group": "^4.0.1",
     "redhooks": "1.1.0",
